# temu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.MD
inc/app/: bf_handler.hpp  handler.hpp
inc/app/handlers/: bf.hpp
inc/bf/: device.hpp  ir.hpp  runner.hpp  state.hpp
inc/bf/devices/: all.hpp  none.hpp  std.hpp
inc/bf/runners/: all.hpp  f_all.hpp  interpreter.hpp  xbyak.hpp
inc/c8/: ir.hpp
inc/core/: defines.hpp
lib/: CMakeLists.txt
lib/lini/: CMakeLists.txt  README.MD
lib/lini/inc/lini/: file.hpp
lib/lini/src/: file.cpp
src/: main.cpp
src/app/: bf_handler.cpp  handler.cpp
src/app/handlers/: bf.cpp
src/bf/: ir.cpp
src/bf/devices/: none.cpp  std.cpp
src/bf/runners/: interpreter.cpp  xbyak.cpp
src/c8/: ir.cpp
